--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "solana-raydium-sniper-bot",
-  "author": "sniperbot",
-  "scripts": {"scripts": 
+  "version":"1.0.0",
+  "main": "dist/index.js",
+  "scripts": {
   "build": "tsc",
   "start": "node dist/index.js"
 }
@@ -32,4 +33,5 @@
     "typescript": "^5.3.3"
   }
 }
+
 
